fix draft structure of article

--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,22 @@ interactions. A number of theoretic results are presented.
 %TODO: Expand when we get results
 \end{abstract}
 
+\section{Introduction}
+
+\subsection{Background}
+
+\section{Utility}
+
+\subsection{Validation}
+
+\section{Proximate of best responses}
+\subsection{In purely random strategies}
+\subsection{In memory one strategies}
+
+\section{Stability of defection}
+
+\section{Numerical experiments}
+
 % Bibliography
 \bibliographystyle{plain}
 \bibliography{bibliography.bib}
