utility and validation section

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -126,3 +126,25 @@
     eprint = {http://www.pnas.org/content/109/26/10409.full.pdf},
     journal = {Proceedings of the National Academy of Sciences}
 }
+
+% Axelrod library
+@misc{axelrodproject,
+  author       = {{ {The Axelrod project developers} }},
+  title        = {Axelrod: <RELEASE TITLE>},
+  month        = apr,
+  year         = 2016,
+  doi          = {<DOI INFORMATION>},
+  url          = {http://dx.doi.org/10.5281/zenodo.<DOI NUMBER>}
+}
+@article{Knight2016,
+archivePrefix = {arXiv},
+arxivId = {1604.00896},
+author = {Knight, Vincent and Campbell, Owen and Harper, Marc and Langner, Karol and Campbell, James and Campbell, Thomas and Carney, Alex and Chorley, Martin and Davidson-Pilon, Cameron and Glass, Kristian and Ehrlich, Tom{\'{a}}{\v{s}} and Jones, Martin and Koutsovoulos, Georgios and Tibble, Holly and Jochen, M{\"{u}}ller and Palmer, Geraint and Slavin, Paul and Standen, Timothy and Visintini, Luis and Molden, Karl},
+eprint = {1604.00896},
+file = {::},
+number = {1},
+title = {{An open reproducible framework for the study of the iterated prisoner's dilemma}},
+url = {http://arxiv.org/abs/1604.00896},
+volume = {1},
+year = {2016}
+}
