--- a/nbs/Background.ipynb
+++ b/nbs/Background.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Background\n",
     "\n",
-    "In 1990 a framework was introduced by Nowak in order to study memory one strategies. The paper models a match between players \\(p\\) and \\(q\\) as a stochastic process. This allow us to easily calculate the outcome of the match, the scores, without simulating the interactions."
+    "In 1990 a framework was introduced by Nowak in order to study memory one strategies. The paper models a match between players \\(p\\) and \\(q\\) as a stochastic process. This allow us to easily calculate the outcome of the match, the scores, without simulating the interactions.\n",
+    "\n",
+    "In this notebook we go through Nowak's formulation and even compare it to the Press and Dyson formulation and reassure that they are equivalent."
    ]
   },
   {
@@ -353,13 +355,6 @@
    "source": [
     "u == utility.subs({S:0, R:3, T:5, P:1}).simplify()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
